--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://huyvogithub.github.io/REACTJS_TEST",
+  "homepage": "https://huyvogithub.github.io/HEALTH_SYSTEM",
   "name": "first-react-app",
   "version": "0.1.0",
   "private": true,
